apps/multimedia/manifests/ombi/04_statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ombi
  namespace: multimedia
  labels:
    app.kubernetes.io/name: ombi
    app.kubernetes.io/version: 4.0.1142
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ombi
  serviceName: ombi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ombi
    spec:
      containers:
      - env:
        - name: TZ
          value: "Europe/Berlin"
        name: ombi
        image: linuxserver/ombi:development-v4.0.1142-ls58
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3579
            name: http-ombi
        readinessProbe:
          tcpSocket:
            port: http-ombi
          initialDelaySeconds: 60
          failureThreshold: 5
          timeoutSeconds: 10
        volumeMounts:
          - mountPath: /config
            name: config
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
      restartPolicy: Always
  volumeClaimTemplates:
  - metadata:
      name: config
      namespace: multimedia
      annotations:
        volume.beta.kubernetes.io/storage-class: "longhorn"
    spec:
      storageClassName: "longhorn"
      accessModes:
        - ReadWriteMany  # NFS
      resources:
        requests:
          storage: 100Mi
