apps/multimedia/manifests/ombi/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: ombi
    app.kubernetes.io/part-of: ombi
    app.kubernetes.io/version: 4.0.1446
  name: ombi
  namespace: multimedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: ombi
      app.kubernetes.io/part-of: ombi
  serviceName: ombi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: ombi
        app.kubernetes.io/part-of: ombi
        app.kubernetes.io/version: 4.0.1446
    spec:
      containers:
      - env:
        - name: TZ
          value: Europe/Berlin
        image: linuxserver/ombi:development
        imagePullPolicy: IfNotPresent
        name: ombi
        ports:
        - containerPort: 3579
          name: http-ombi
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 60
          tcpSocket:
            port: http-ombi
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /config/Logs
          name: logs
      restartPolicy: Always
      serviceAccountName: ombi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: ombi-config
      - emptyDir: {}
        name: logs
