apps/multimedia/manifests/ombi/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: ombi
    app.kubernetes.io/part-of: ombi
    app.kubernetes.io/version: 4.2.2
  name: ombi
  namespace: multimedia
spec:
  ports:
  - name: http-ombi
    port: 3579
    targetPort: http-ombi
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: ombi
    app.kubernetes.io/part-of: ombi
