apps/multimedia/manifests/ombi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: ombi
    app.kubernetes.io/part-of: ombi
    app.kubernetes.io/version: 4.10.0
    probe: enabled
  name: ombi
  namespace: multimedia
spec:
  rules:
  - host: ombi.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: ombi
            port:
              name: http-ombi
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ombi.ankhmorpork.thaum.xyz
    secretName: ombi-tls
